package cn.cdut.sixpan.Utils;

public enum RequestType {
    GET,POST,DELETE,PUT
}
